Criação de endpoints na API REST
Implementar chamada dos endpoint para incluir e excluir item no pedido
